# kisanAI

./: .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  WhatsappIntegration.md  WhatsappIntegrationRECORD.md  WhatsappIntegrationTASK.md  pyproject.toml  requirements-google.txt  requirements.txt
app/: __init__.py  main.py
app/core/: config.py
app/models/: __init__.py  schemas.py
app/repositories/: memory_store.py  store.py
app/services/: __init__.py  alert_delivery_service.py  alert_priority_policy.py  bigquery_ingestion_service.py  bigquery_public_data_service.py  call_service.py  channel_intent.py  channel_receipt_service.py  conversation_store.py  crop_stage_advisory_service.py  dialogflow_channel_service.py  earth_engine_service.py  expert_service.py  gemini_service.py  government_data_service.py  proactive_alert_service.py  provider_config_service.py  recommendation_engine.py  sensor_service.py  sms_service.py  soil_card_vision_service.py  translation_service.py  vision_ocr_service.py  voice_service.py  weather_service.py  (+2 more)
backend/: .env.example  .gcloudignore  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEVELOPMENT_SEQUENCE.md
flutter_chat_app/: README.md  pubspec.yaml
react_native_chat_app/: .gcloudignore  Dockerfile  README.md  app.json  package-lock.json  package.json  server.js  tsconfig.json
scripts/: deploy_cloud_run.sh  fetch_public_data_sources.py  print_webhook_urls.sh  setup_scheduler_pubsub.sh
smoke_tests/: common.py  test_all_local.py  test_authkey_channels.py  test_bigquery.py  test_dialogflow.py  test_earth_engine.py  test_firestore.py  test_maps_geocoding.py  test_pubsub.py  test_secret_manager.py  test_speech_to_text.py  test_storage.py  test_text_to_speech.py  test_translation.py
tests/: test_core_flow.py
(+166 files in other folders)
