[project]
name = "kisan-alert-hackathon"
version = "0.1.0"
description = "FastAPI prototype for Track 4 Kisan Alert: smart crop, water and advisory system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0"
]
google = [
  "google-cloud-aiplatform>=1.65.0",
  "google-cloud-speech>=2.27.0",
  "google-cloud-texttospeech>=2.17.0",
  "google-cloud-translate>=3.16.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

